--- a/szkarlatna_wdowa.html
+++ b/szkarlatna_wdowa.html
@@ -42,6 +42,14 @@
                     <li><a href="glowna.html">Strona Główna</a></li>
                 </ul>
             </section>
+            <section>
+                <h4>Wykonał</h4>
+                <address>
+                    Aleksander Karczewski<br>
+                    154373<br>
+                    WIiT. V sem<br>
+                </address>
+            </section>
         </div>
     </footer>
 </body>
