--- a/glowna.html
+++ b/glowna.html
@@ -57,7 +57,7 @@
             <ul>
                 <li><a href="glowna.html" class="hvr-grow">Strona Główna</a></li>
                 <li><a href="recenzja_hobbita.html" class="hvr-grow">Hobbit</a></li>
-                <li><a href="szkarlatna_wdowa.css" class="hvr-grow">Szkarłatna Wdowa</a></li>
+                <li><a href="szkarlatna_wdowa.html" class="hvr-grow">Szkarłatna Wdowa</a></li>
                 <li><a href="wladca_pierscieni.html" class="hvr-grow">Władca Pierścieni</a></li>
             </ul>
         </nav>
@@ -73,7 +73,7 @@
                     krasnoludy i wiele innych fascynujących postaci. Przygotuj się na przygodę, która na zawsze
                     pozostanie w twoim sercu.</p>
                 <p>Chcesz dowiedzieć się więcej o tej niesamowitej książce? Przeczytaj pełną 
-                    <a href="recenzja_hobbita.html" class="hvr-grow">recenzję książki "Hobbit"</a>.</p>
+                    <a href="recenzja_hobbita.html" class="hvr-grow">recenzję książki "Hobbit".</a></p>
             </article>
 
             <article class="animate__animated animate__zoomIn" >
@@ -82,7 +82,7 @@
                     Mastertona to lektura, która pozostawi cię z dreszczem na plecach. Przygotuj się na ekscytujący
                     thriller, który zabierze cię w mroczne zakamarki ludzkiego umysłu i natury.</p>
                 <p>Chcesz dowiedzieć się więcej o tej niesamowitej książce? Przeczytaj pełną <a
-                        href="szkarlatna_wdowa.html">recenzję książki "Szkarłatna Wdowa"</a>.</p>
+                        href="szkarlatna_wdowa.html" class="hvr-grow">recenzję książki "Szkarłatna Wdowa".</a></p>
             </article>
 
             <article class="animate__animated animate__zoomIn">
@@ -92,7 +92,7 @@
                     Opowieść rozgrywa się w magicznym świecie Śródziemia i opisuje niezwykłą podróż hobbita Froda
                     Bagginsa oraz jego przyjaciół,
                     którzy zostają wciągnięci w misję ocalenia światu przed ciemnym władcą Sauronem.Przeczytaj pełną
-                    <a href="wladca_pierscieni.html" class="hvr-grow">recenzję książki "Władca Pierścieni"</a>.
+                    <a href="wladca_pierscieni.html" class="hvr-grow">recenzję książki "Władca Pierścieni".</a>
                 </p>
             </article>
 
