--- a/recenzja_hobbita.html
+++ b/recenzja_hobbita.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="hobbit.css">
+    <!-- <link rel="stylesheet" href="hobbit.css"> -->
+    <link rel="stylesheet" href="podstrona.css">
+    
     <title>Recenzja książki "Hobbit"</title>
 </head>
 <body>
