--- a/wladca_pierscieni.html
+++ b/wladca_pierscieni.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="szkarlatna_wdowa.css">
+    <link rel="stylesheet" href="podstrona.css">
     <title>Recenzja książki "Władca Pierścieni"</title>
 </head>
 <body>
