--- a/glowna.html
+++ b/glowna.html
@@ -17,8 +17,10 @@
                 //console.log("filedName: ", fieldName);
                 var value = element.value.trim();
                 var errorId = "error" + fieldName.charAt(0).toUpperCase() + fieldName.slice(1);
+                document.getElementById("imie-error").innerHTML = "";
             }
             else {
+                document.getElementById("imie-error").innerHTML = "*";
                 return false
             }
 
@@ -55,16 +57,12 @@
             var fieldName = element.name;
             if (fieldName != undefined) {
 
-                //console.log("filedName: ", fieldName);
                 var value = element.value.trim();
                 var errorId = "error" + fieldName.charAt(0).toUpperCase() + fieldName.slice(1);
             }
             else {
                 return false
             }
-            //var value = element.value.trim();
-            //var errorId = "error" + fieldName.charAt(0).toUpperCase() + fieldName.slice(1);
-            //console.log(value);
             if (!value.includes('@')) {
                 element.classList.add("invalid");
                 document.getElementById("email-error").innerHTML = "*";
@@ -186,7 +184,6 @@
             return imieValid && nazwiskoValid && emailValid && hasloValid && haslo2Valid && opisValid && autorValid && tytulValid;
         }
 
-        // liczba wierszy z uwzględnieniem nagłówka
 
         function dodajWiersz() {
             if (validateForm() == false) {
@@ -254,6 +251,7 @@
             var tabela = document.getElementById("tabela-danych");
             //console.log(tabela);
             var liczbaWierszy = tabela.rows.length - 1;
+            document.getElementById("liczbaPozycji").innerHTML=liczbaWierszy+1;
             //alert(liczbaWierszy+100);
             var tytul = document.getElementById("tytul").value;
             var autor = document.getElementById("autor").value;
@@ -282,7 +280,7 @@
             komorka7.innerHTML = "<button onclick='przesunWGore(this)'>W górę</button> <button onclick='przesunWDol(this)'>W dół</button>";
 
 
-            // Ustawienie koloru na biały lub szary (naprzemiennie)
+            // bialy szary - naprzemiennie
             nowyWiersz.style.backgroundColor = liczbaWierszy % 2 === 0 ? "#ffffff" : "#f0f0f0";
         }
 
@@ -309,7 +307,6 @@
             var wiersz = przycisk.parentNode.parentNode;
             var komorki = wiersz.getElementsByTagName("td");
 
-            // Przykład edycji - możesz dostosować do swoich potrzeb
             var nowyTytul = prompt("Podaj nowy tytuł:", komorki[0].innerHTML);
             var nowyAutor = prompt("Podaj nowego autora:", komorki[1].innerHTML);
             var nowyOpis = prompt("Podaj nowy opis:", komorki[2].innerHTML);
@@ -329,8 +326,11 @@
 
             // Zaktualizuj kolory po usunięciu wiersza
             for (var i = 1; i < tabela.rows.length; i++) {
-                tabela.rows[i].style.backgroundColor = i % 2 === 0 ? "#ffffff" : "#a8a8a8";
+                tabela.rows[i].style.backgroundColor = i % 2 === 0 ? "#ffffff" : "#f0f0f0";
             }
+
+            var liczbaWierszy = tabela.rows.length - 1;
+            document.getElementById("liczbaPozycji").innerHTML=liczbaWierszy;
         }
 
         /*
@@ -397,43 +397,43 @@
             <!--  onsubmit="validateForm()" -->
             <form>
                 <label for="imie">Imię:</label>
-                <input type="text" id="imie" required onblur="validateForm()">
+                <input type="text" id="imie" required onblur="validateImie(document.getElementById('imie'))"> <!--"validateForm()">-->
                 <span class="error-star" id="imie-error"></span>
                 <br>
 
                 <label for="nazwisko">Nazwisko:</label>
-                <input type="text" id="nazwisko" required onblur="validateForm()">
+                <input type="text" id="nazwisko" required onblur="validateNazwisko(document.getElementById('nazwisko'))"> <!--"validateForm()">-->
                 <span class="error-star" id="nazwisko-error"></span>
                 <br>
 
                 <label for="email">Adres e-mail:</label>
-                <input type="email" id="email" required onblur="validateForm()">
+                <input type="email" id="email" required onblur="validateEmail(document.getElementById('email'))">
                 <span class="error-star" id="email-error"></span>
                 <br>
 
                 <label for="haslo">Hasło (min. 8 znaków, przynajmniej jedna cyfra):</label>
                 <input type="password" id="haslo" pattern="^(?=.*[A-Za-z])(?=.*\d)[A-Za-z\d]{8,}$" required
-                    onblur="validateForm()">
+                    onblur="validatePassword(document.getElementById('haslo'))">
                 <span class="error-star" id="haslo-error"></span>
                 <br>
 
                 <label for="powtorz-haslo">Powtórz hasło:</label>
-                <input type="password" id="powtorz-haslo" required onblur="validateForm()">
+                <input type="password" id="powtorz-haslo" required onblur="validatePasswordMatch(document.getElementById('powtorz-haslo'))">
                 <span class="error-star" id="powtorz-haslo-error"></span>
                 <br>
 
                 <label for="opis">Krótki opis (maks. 20 znaków):</label><br>
-                <textarea id="opis" rows="4" cols="50" required onblur="validateForm()"></textarea>
+                <textarea id="opis" rows="4" cols="50" required onblur="validateOpis(document.getElementById('opis'))"></textarea>
                 <span class="error-star" id="opis-error"></span>
                 <br>
 
                 <label for="tytul">Tytuł:</label>
-                <input type="text" id="tytul" required onblur="validateForm()">
+                <input type="text" id="tytul" required onblur="validateTytul(document.getElementById('tytul'))">
                 <span class="error-star" id="tytul-error"></span>
                 <br>
 
                 <label for="autor">Autor:</label>
-                <input type="text" id="autor" required onblur="validateForm()">
+                <input type="text" id="autor" required onblur="validateAutor(document.getElementById('autor'))">
                 <span class="error-star" id="autor-error"></span>
                 <br>
 
@@ -460,7 +460,7 @@
             <th>Adres e-mail</th>
         </tr>
     </table>
-
+    <p >Liczba pozycji</p><p id="liczbaPozycji">0</p>
     </section>
     </main>
 
